--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,33 @@ GOOGLE_REDIRECT_URL=http://localhost:8080/api/auth/google/callback
 
 # For production, use your domain:
 # GOOGLE_REDIRECT_URL=https://yourdomain.com/api/auth/google/callback
+
+# CORS Configuration (Security)
+ALLOWED_ORIGINS=http://localhost:8080,https://localhost:8080,http://127.0.0.1:8080
+
+# JWT Configuration
+JWT_SECRET=your_super_secure_jwt_secret_key_here_at_least_32_characters_long
+
+# Rate Limiting Configuration  
+RATE_LIMIT_REQUESTS_PER_MINUTE=100
+AUTH_RATE_LIMIT_REQUESTS_PER_MINUTE=5
+METADATA_RATE_LIMIT_REQUESTS_PER_MINUTE=30
+
+# Security Settings
+ENABLE_HTTPS_ONLY=false
+ENABLE_STRICT_CORS=true
+ENABLE_SECURITY_HEADERS=true
+
+# Content Security Policy (CSP)
+# Development (relaxed for Vue.js):
+# CSP_POLICY=default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self'
+# Production (stricter):
+# CSP_POLICY=default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self'
+
+# Database Configuration
+DB_PATH=data/links.db
+
+# Server Configuration
+PORT=8080
+STATIC_DIR=static
+LOG_LEVEL=info
